Tue Apr  8 08:53:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/monitor/monitor_client:
          Added -s to specify sleep time in seconds

Tue Apr  8 08:40:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Monitor/Marshal_Buffer/client.cpp:
          Also use the ACE MP's

        * tests/Monitor/Marshal_Buffer/marshal_buffer.mpc:
          Removed monitor_client

        * tests/Monitor/Marshal_Buffer/run_test.pl:
          Retrieve a few MP values

Tue Apr  8 08:14:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/monitor/monitor_client:
          Use the strategies lib

        * performance-tests/Throughput/monitor_client.cpp:
          Removed, we have a generic client that can be used

        * performance-tests/Throughput/run_test_with_monitor_queries.pl:
          Use the generic client with the -p argument

Tue Apr  8 08:08:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Monitor/Marshal_Buffer/monitor_client.cpp:
        * utils/monitor/monitor_client:
          Moved the generic monitor client to utils

Mon Apr  7 16:56:06 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * performance-tests/Throughput/monitor_client.cpp:

          Changes necessitated by

          Mon Apr  7 12:37:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

Mon Apr  7 12:37:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Monitor/Monitor.pidl:
        * tao/Monitor/Monitor_Impl.cpp:
        * tao/Monitor/Monitor_Impl.h:
          Assume we always retrieve a list of data to the client for each
          monitor point. At this moment the list has then always size 1

        * tests/Monitor/Marshal_Buffer/monitor_client.cpp:
          Support multiple -p arguments, updated for the list changes. Values
          are printed for 0, have to go through the code again, but this way
          I can share the code with Jeff
